feat(config): use openai_model env var as default model

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -65,14 +65,16 @@ agents:
   # Zero-shot LLM Agent
   simple_llm:
     enabled: true
-    model: "gpt-4o-mini"
+    # model: 从环境变量 OPENAI_MODEL 读取，如需覆盖可取消注释
+    # model: "gpt-4o-mini"
     temperature: 0.1
     max_tokens: 100
 
   # Reflexion Agent (核心)
   reflexion:
     enabled: true
-    model: "gpt-4o-mini"
+    # model: 从环境变量 OPENAI_MODEL 读取，如需覆盖可取消注释
+    # model: "gpt-4o-mini"
     decision_temperature: 0.1
     reflection_temperature: 0.3
     # 记忆设置
@@ -109,9 +111,9 @@ ablation:
     - name: "long_memory"
       modify:
         agents.reflexion.memory.max_days: 14
-    - name: "gpt4o_model"
+    - name: "gpt4.1mini_model"
       modify:
-        agents.reflexion.model: "gpt-4o"
+        agents.reflexion.model: "gpt-4.1-mini"
     - name: "high_temperature"
       modify:
         agents.reflexion.decision_temperature: 0.7
