feat(llm): support configurable openai api base url

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,22 @@
-# OpenAI API Key
-OPENAI_API_KEY=your-api-key-here
+# DeepSeek API Configuration (示例)
 
-# Optional: Model configuration
-OPENAI_MODEL=gpt-5-mini
+# cURL 调用示例（参考）
+# curl https://$BASE_URL/v1/chat/completions \
+#   -H "Content-Type: application/json" \
+#   -H "Authorization: Bearer $API_KEY" \
+#   -d '{
+#     "model": "$MODEL_ID",
+#     "messages": [
+#       { "role": "user", "content": "Hello world" }
+#     ]
+#   }'
+
+# 通用环境变量（用于 cURL 或其他客户端）
+BASE_URL=https://llmapi.paratera.com
+API_KEY=your-deepseek-api-key-here
+MODEL_ID=Kimi-K2
+
+# 代码运行所需（LangChain OpenAI 兼容接口）
+OPENAI_API_BASE=https://llmapi.paratera.com/v1
+OPENAI_API_KEY=your-deepseek-api-key-here
+OPENAI_MODEL=Kimi-K2
