feat(data): 使用 CAISO 真实数据并增强价格波动
数据来源与处理:
- 原始数据来源于 GridStatus.io 的 CAISO 电力市场数据
- LMP 价格数据: 10TH_STW 节点小时级数据
- 负荷数据: CA ISO-TAC 区域总负荷

数据增强规则:
- 时段差异化: 低谷×0.5, 高峰×2.5
- 波动放大: 围绕均值偏离放大3倍
- 价格尖峰: 3%概率出现4倍价格尖峰
- 负电价: 2%概率模拟可再生能源过剩

配置更新:
- 默认数据切换为 caiso_enhanced_data.csv
- Rule Agent 阈值调整适应新价格范围
- .gitignore 排除原始数据文件

新增文件:
- data/caiso_enhanced_data.csv: 增强后的最终数据
- data/enhance_price_data.py: 数据增强脚本
- data/process_caiso_data.py: 原始数据处理脚本

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@ wheels/
 .DS_Store
 
 outputs/
+
+# 原始数据文件 (只保留增强后的最终数据)
+data/CAISO_LMP_*.csv
+data/CAISO_load_*.csv
+data/caiso_market_data.csv
+data/caiso_full_data.csv
+data/market_data.csv
+data/cache/
