--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "openai>=1.0.0",
     "pandas>=2.0.0",
     "numpy>=1.24.0",
+    "scipy>=1.10.0",
+    "gymnasium>=0.29.0",
     "matplotlib>=3.7.0",
     "seaborn>=0.12.0",
     "python-dotenv>=1.0.0",
@@ -18,4 +20,3 @@ dependencies = [
 
 [project.scripts]
 battery-agent = "main:main"
-
