feat: 实现 Agent-Generates-Agent (AGA) 架构的 MetaReflexionAgent
🎯 主要变更:
- 新增 MetaReflexionAgent: LLM 生成 Python 策略代码，而非自然语言
- 新增 code_executor.py: 代码沙盒执行器，安全加载和测试生成的策略
- 新增 main_aga.py: AGA 专用训练脚本
- 删除旧的 ReflexionAgent，保留更高效的 AGA 架构

📊 实验结果 (14天模拟):
- MetaReflexionAgent: $42.35 (🥇 最佳) - 仅 15 次 LLM 调用
- Rule-Based: $34.23
- CoT Agent: $21.47 - 350 次 LLM 调用
- Simple LLM: $5.36 - 336 次 LLM 调用

🔬 AGA 架构优势:
- 效率提升 22.4x (节省 95.5% API 成本)
- 代码即策略: 避免解析错误，逻辑精确
- 自适应学习: 动态阈值 + 时间/SOC 敏感
- 迭代优化: 每日反思生成改进版本

📁 新增文件:
- src/code_executor.py
- main_aga.py
- scripts/generate_analysis_report.py
- outputs/meta_agent_analysis.png
- outputs/strategy_evolution.png

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ outputs/*
 !outputs/cumulative_profits.png
 !outputs/daily_profits.png
 !outputs/action_distribution.png
+!outputs/meta_agent_analysis.png
+!outputs/strategy_evolution.png
 !outputs/full_experiment_results_14days.csv
 !outputs/results_metadata.yaml
 
